--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
-  "name": "adolfounet",
+  "name": "c",
   "version": "0.0.0",
   "private": true,
+  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "homepage": "https://github.com/RodolpheGrenier/Todo-Vue#readme",
+  "bugs": {
+    "url": "https://github.com/RodolpheGrenier/Todo-Vue/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RodolpheGrenier/Todo-Vue.git"
+  },
+  "license": "ISC",
+  "author": "",
   "type": "module",
+  "main": "vite.config.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
